--- a/quiz.css
+++ b/quiz.css
@@ -45,3 +45,21 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: black;
 }
+
+#output
+{
+background: white;
+border-radius: 10px;
+border-top: 10px solid #c95e01;
+padding: 10px;
+float: none;
+text-align: left;
+}
+
+#numbers {
+    background-color: #667402;
+}
+
+#number1, #number2 {
+    width: 100%;
+}
